# toolbox_ia

./: .buildinfo  .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  Projet_1_bases.md  README.md  arborescence.txt  changelog.html  docker-compose.prod.yml  docker-compose.yml  dockerfile  genindex.html  governance.html  index.html  license.html  main.html  mon_module.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sql_app.db
.doctrees/: changelog.doctree  environment.pickle  governance.doctree  index.doctree  license.doctree  main.doctree  mon_module.doctree
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_CONTEXT.md
.github/workflows/: cd.yml  ci.yml  release.yml
_modules/: index.html  main.html
_modules/maths/: mon_module.html
_sources/: license.rst.txt  main.rst.txt  mon_module.rst.txt
app/: main.py
app/modules/: __init__.py  mon_module.py
app_api/: Dockerfile  export_openapi.py  main.py  pyproject.toml  sql_app.db
app_api/data/: moncsv.csv
app_api/maths/: mon_module.py
app_api/models/: models.py
app_api/modules/: connect.py  crud.py
app_front/: Dockerfile  main.py  pyproject.toml
app_front/pages/: 0_insert.py  1_read.py
docs/: api_db.rst  api_logic.rst  api_main.rst  changelog.rst  conf.py  front_main.rst  governance.rst  index.rst  mon_module.rst
tests/: test_api.py  test_math_csv.py
