[project]
name = "toolbox-template"
version = "1.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "loguru>=0.7.3",
    "pandas>=3.0.1",
    "pandera>=0.20.0",  # NOUVEAU : Pour valider strictement nos DataFrames
]

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
    "sphinx>=9.1.0",
]


# ==============================================================================
# CONFIGURATION RUFF : La "Police du Code"
# ==============================================================================
[tool.ruff]
# On définit une longueur de ligne standard pour éviter les codes illisibles sur petits écrans
line-length = 88 
# On cible une version moderne de Python pour optimiser l'analyse syntaxique
target-version = "py312" 

[tool.ruff.lint]
# Sélection stricte des règles à appliquer :
# E = Erreurs PEP8, W = Warnings PEP8, F = Pyflakes (erreurs logiques)
# I = Isort (tri des imports), D = Docstrings (convention Pydocstyle)
# MODIFICATION : Ajout de UP (PyUpgrade), B (Bugbear pour les failles logiques), 
# et PT (Pytest-style pour standardiser nos tests)
select = ["E", "W", "F", "I", "D", "UP", "B", "PT"] 

# Exceptions tolérées :
# D100 = "Missing docstring in public module". On autorise l'absence de docstring en tout début de fichier pour ne pas surcharger les petits scripts.
ignore = ["D100", "D203", "D213"] # On ajoute D203 et D213 aux exceptions

# ==============================================================================
# CONFIGURATION PYTEST : Le "Banc de Test"
# ==============================================================================
[tool.pytest.ini_options]
# Dossier exclusif où Pytest doit chercher les tests
testpaths = ["tests"] 
# Pattern de nommage obligatoire pour que Pytest reconnaisse un fichier de test
python_files = "test_*.py" 
# Options par défaut injectées à chaque lancement de pytest :
# -v : mode verbeux (détail des tests)
# --cov=app : mesure la couverture de code uniquement sur le dossier "app"
# --cov-report=term-missing : affiche dans le terminal les lignes exactes non testées
addopts = "-v --cov=app --cov-report=term-missing"
# Ajout crucial pour la résolution des modules locaux :
pythonpath = ["."]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
omit = ["app/main.py"]

[tool.semantic_release]
version_variable = "app/__init__.py:__version__" # Si tu as une version dans ton code
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false # On ne publie pas encore sur PyPI
upload_to_release = true
build_command = "uv build"

