[project]
name = "toolbox-api"
version = "2.0.0"
description = "Micro-service API pour la Toolbox IA"
readme = "README.md"
requires-python = ">=3.10"

# Dépendances nécessaires au fonctionnement du moteur (Production)
dependencies = [
    "fastapi[standard]>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.29",
    "pydantic>=2.6.4",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.0.0",
    "pandera>=0.18.0",
    "loguru>=0.7.2"
]

[dependency-groups]
# Outils pour la qualité, les tests et la documentation (Développement)
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "genbadge[coverage]>=1.1.1", # Nouveau : Remplace coverage-badge
    "httpx>=0.27.0",
    "sphinx>=7.2.6",
    "furo>=2024.1.29",
    "myst-parser>=2.0.0",
    "sphinxcontrib-redoc>=1.6.0",
    "setuptools>=82.0.0",
]
