[project]
name = "toolbox-front"
version = "2.0.0"
description = "Interface utilisateur (Streamlit) pour la Toolbox IA"
readme = "README.md"
requires-python = ">=3.10"
# Le Front n'a besoin QUE de ces deux librairies. 
# Pas de SQLAlchemy, pas de FastAPI ici !
dependencies = [
    "streamlit>=1.32.0",      # Le framework pour faire des interfaces rapides
    "requests>=2.31.0",       # L'outil pour "téléphoner" à notre API FastAPI
]